# Fabienne

./: .env.example  .env.prod.example  .gitignore  .mcp.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_segments.py  0002_prospects.py  0003_short_segment_ids.py  0004_prospect_segment_fk.py  0005_comments_table.py  0006_actions_table.py  0007_comment_action_link.py  0008_comment_date_default.py  0009_segments_signals_merge.py  0010_sources.py  0011_contact_signals.py  0012_real_seed.py  0013_chat_conversations.py  0014_entreprises_refonte.py  0015_finess_and_data_sources.py  0016_enrichment_provenance.py  0017_nullable_segment_id.py  0018_sourced_candidates.py  0019_segment_ai_sources.py  0020_ordre_annuaire.py  0021_entreprise_google_places.py  0022_drop_horaires_text.py  0023_segment_activity_zone.py  0024_users.py  0025_move_fiche_to_entreprise.py  0026_unify_signaux_on_entreprise.py  0027_drop_chat_tables.py  0028_drop_entreprise_ca_score.py  0029_prospect_relance_note.py  0030_enrichment_status.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  action.py  comment.py  conversation.py  entreprise.py  enums.py  finess.py  ordre.py  prospect.py  segment.py  sourced_candidate.py  user.py
backend/app/schemas/: action.py  auth.py  chat.py  comment.py  enrichment.py  entreprise.py  prospect.py  segment.py  (+1 more)
backend/scripts/: seed_segments.sql
(+112 files in other folders)
